--- a/index.html
+++ b/index.html
@@ -32,6 +32,33 @@
         </div>
         <div id="playerList" class="player-list"></div>
     </div>
+
+    <div id="conditionModal" class="modal">
+        <div class="modal-content">
+            <span class="close" onclick="closeModal()">&times;</span>
+            <h2>Select Condition</h2>
+            <select id="conditionSelect">
+                <option value="Blinded">Blinded</option>
+                <option value="Charmed">Charmed</option>
+                <option value="Deafened">Deafened</option>
+                <option value="Frightened">Frightened</option>
+                <option value="Grappled">Grappled</option>
+                <option value="Incapacitated">Incapacitated</option>
+                <option value="Invisible">Invisible</option>
+                <option value="Paralyzed">Paralyzed</option>
+                <option value="Petrified">Petrified</option>
+                <option value="Poisoned">Poisoned</option>
+                <option value="Prone">Prone</option>
+                <option value="Restrained">Restrained</option>
+                <option value="Stunned">Stunned</option>
+                <option value="Unconscious">Unconscious</option>
+                <option value="Concentration">Concentration</option>
+                <option value="Exhaustion">Exhaustion</option>
+            </select>
+            <button onclick="applyCondition()">Apply Condition</button>
+        </div>
+    </div>
+
     <script src="scripts.js"></script>
 </body>
 </html>
